--- a/taqueria-vscode-extension-web-ui/src/data-editors/MichelineEditor.css
+++ b/taqueria-vscode-extension-web-ui/src/data-editors/MichelineEditor.css
@@ -33,3 +33,13 @@ body.vscode-high-contrast {
     padding: 0;
     margin: 0;
 }
+h4 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: inline;
+}
+h3 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: inline;
+}
