--- a/website/src/components/WhyTaqueria/WhyTaqueria.module.css
+++ b/website/src/components/WhyTaqueria/WhyTaqueria.module.css
@@ -18,7 +18,7 @@
 }
 .features {
 	display: flex;
-	align-items: start;
+	align-items: flex-start;
 	padding: 2rem 0;
 	width: 100%;
 	position: relative;
