--- a/website/src/components/Hero/Hero.module.css
+++ b/website/src/components/Hero/Hero.module.css
@@ -181,7 +181,7 @@ video {
 	width: 100%;
 	max-width: fit-content;
 	border-radius: 8px;
-	max-width: 558px;
+	/* max-width: 558px; */
 }
 
 .videoHeader {
